Code cleanup and stylesheet added

--- a/Interface&Navigation/Practitioner.html
+++ b/Interface&Navigation/Practitioner.html
@@ -2,9 +2,12 @@
 
 <html> <!-- It all starts with the html tag, better respect yo' -->
     <head>
-        <title>
-        Physiosearch
-        </title>
+      <title>
+      Physiosearch
+      </title>
+
+      <link type="text/css" rel="stylesheet" href="./style.css"/>
+              <!-- ^ "imports" the main CSS stylesheet from the local link -->
     </head>
 
     <body>
