--- a/Interface&Navigation/Practitioner.html
+++ b/Interface&Navigation/Practitioner.html
@@ -1,13 +1,16 @@
 <!doctype html>
 
-<html> <!-- It all starts with the html tag, better respect yo' -->
+<!-- It all starts with the html tag, better respect yo' -->
+<html>
     <head>
       <title>
       Physiosearch
       </title>
 
+      <!-- ^ "imports" the main CSS stylesheet from the local link -->
       <link type="text/css" rel="stylesheet" href="./style.css"/>
-              <!-- ^ "imports" the main CSS stylesheet from the local link -->
+
+
     </head>
 
     <body>
