--- a/Interface&Navigation/Index.html
+++ b/Interface&Navigation/Index.html
@@ -12,6 +12,12 @@
       Physiosearch
       </title>
 
+      <!-- Compiled and minified CSS -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+
+      <!-- Compiled and minified JavaScript -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+
       <!-- ^ "imports" a stylesheet from the link, which contains a number of
       icons, we reffer to it in the body as 'fa fa-search' -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
