--- a/Interface&Navigation/Practitioner.html
+++ b/Interface&Navigation/Practitioner.html
@@ -7,16 +7,23 @@
       Physiosearch
       </title>
 
+      <!-- Compiled and minified CSS -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+
+      <!-- Compiled and minified JavaScript -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+
       <!-- ^ "imports" the main CSS stylesheet from the local link -->
       <link type="text/css" rel="stylesheet" href="./style.css"/>
-
 
     </head>
 
     <body>
-        <img src="https://i.imgur.com/0CVNTap.png">
-        <h3>Physiosearch 2nd page</h3>
-        Allowing you to easily search for physiotherapists based on <br />costumer reviews, diplomas and special competences.
-      <hr />
+      <img src="https://i.imgur.com/0CVNTap.png">
+      <h3>Physiosearch 2nd page</h3>
+      <p>
+        Allowing you to easily search for physiotherapists based on
+        <br /> costumer reviews, diplomas and special competences.
+      </p>
     </body>
 </html>
