--- a/Interface&Navigation/Index.html
+++ b/Interface&Navigation/Index.html
@@ -32,25 +32,31 @@
     </head>
 
     <body>
-      <div class="wrap">
-        <info><strong>Search for physiotherapists all around Denmark</strong></info>
+      <nav>
+        <div class="nav-wrapper">
+          <a href="#" class="brand-logo"><img src="https://i.imgur.com/0CVNTap.png" alt=""></a>
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a href="sass.html">Become a physiotherapist</a></li>
+            <li><a href="badges.html">Sign in</a></li>
+          </ul>
+        </div>
+      </nav>
 
-        <div class="searchBar">
+      <div class="row center">
+        <h1 class="col s12"><strong>Search for physiotherapists all around Denmark</strong></h1>
+      </div>
+
+      <div class="row center searchBar">
+        <div class="col s12">
           <input type="text" class="searchTerm" placeholder="Try 'Aalborg' or 'Nordjylland'">
           <button type="submit" class="searchButton">
             <i class="fa fa-search"></i>
           </button>
         </div>
-    </div>
-
-    <div id="logo">
-      <img src="https://i.imgur.com/0CVNTap.png" alt="">
-    </div>
+      </div>
 
     <div class="backgroundImage">
     </div>
-
-    <h3>Physiosearch</h3>
 
     </body>
 </html>
