corrections to page structure and CSS cleanup

--- a/Interface&Navigation/Index.html
+++ b/Interface&Navigation/Index.html
@@ -36,22 +36,31 @@
         <div class="nav-wrapper">
           <a href="#" class="brand-logo"><img src="https://i.imgur.com/0CVNTap.png" alt=""></a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="sass.html">Become a physiotherapist</a></li>
-            <li><a href="badges.html">Sign in</a></li>
+            <li><a href="#">Become a physiotherapist</a></li>
+            <li><a href="#">Sign in</a></li>
           </ul>
         </div>
       </nav>
 
-      <div class="row center">
-        <h1 class="col s12"><strong>Search for physiotherapists all around Denmark</strong></h1>
-      </div>
+      <div class="container center">
+        <div class="row">
 
-      <div class="row center searchBar">
-        <div class="col s12">
-          <input type="text" class="searchTerm" placeholder="Try 'Aalborg' or 'Nordjylland'">
-          <button type="submit" class="searchButton">
-            <i class="fa fa-search"></i>
-          </button>
+          <div class="col s12">
+            <h1>Search for physiotherapists all around Denmark</h1>
+          </div>
+
+
+          <div class="col s12">
+            <input placeholder="Try 'Aalborg' or 'Nordjylland" id="search" type="text" class="validate">
+            <label for="search_bar"></label>
+          </div>
+
+          <div class="">
+            <button class="btn waves-effect waves-light" type="submit" name="action">Search
+              <i class="material-icons fa fa-search right"></i>
+            </button>
+          </div>
+
         </div>
       </div>
 
