--- a/Interface&Navigation/Index.html
+++ b/Interface&Navigation/Index.html
@@ -51,8 +51,8 @@
 
 
           <div class="col s12">
-            <input placeholder="Try 'Aalborg' or 'Nordjylland" id="search" type="text" class="validate">
-            <label for="search_bar"></label>
+            <input placeholder="Try 'Aalborg' or 'Nordjylland" id="search-cover" type="text" class="validate center">
+            <label for="search-cover"></label>
           </div>
 
           <div class="">
