--- a/Interface&Navigation/Index.html
+++ b/Interface&Navigation/Index.html
@@ -34,7 +34,7 @@
     <body>
       <nav>
         <div class="nav-wrapper">
-          <a href="#" class="brand-logo"><img src="https://i.imgur.com/0CVNTap.png" alt=""></a>
+          <a href="#" class="brand-logo"><img src="https://i.imgur.com/0CVNTap.png" height="45px" alt=""></a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="#">Become a physiotherapist</a></li>
             <li><a href="#">Sign in</a></li>
@@ -42,21 +42,21 @@
         </div>
       </nav>
 
-      <div class="container center">
+      <div class="container center cover">
         <div class="row">
 
-          <div class="col s12">
+          <div class="col m12">
             <h1>Search for physiotherapists all around Denmark</h1>
           </div>
 
 
-          <div class="col s12">
-            <input placeholder="Try 'Aalborg' or 'Nordjylland" id="search-cover" type="text" class="validate center">
+          <div class="col m12">
+            <input placeholder="Try 'Aalborg' or 'Nordjylland" id="search-bar-cover" type="text" class="validate center">
             <label for="search-cover"></label>
           </div>
 
           <div class="">
-            <button class="btn waves-effect waves-light" type="submit" name="action">Search
+            <button class="btn waves-effect waves-light" type="submit" name="action">search
               <i class="material-icons fa fa-search right"></i>
             </button>
           </div>
